finding-android1/stylesheets/style.css
#android_logo{
  text-align: center;
}

#id{
    width: 20em;
    height: 2em;
}

.button {
    background-color: #000000;
    color: #FFFFFF;
    float: right;
    padding: 10px;
    border-radius: 10px;
}

.small-btn {
    width: 50px;
    height: 20px;
}

.medium-btn {
    width: 70px;
    height: 30px;
}

.big-btn {
    width: 90px;
    height: 40px;
}

